in 2012 we changed it to first query for AUTHZID, and only if that is
not available, fall back to using AUTHID as the authorization
identity.  The change was not released until version 1.8.1 on
2019-08-02, when it was properly documented to be removed 'after the
year 2012'.  While documented behaviour, this seems like just
surprising behaviour and we now finally make the change.

** The examples/smtp-server.c now supports GSSAPI/GS2-KRB5.
The example is used during CI/CD testing of GNU SASL and thus it made
sense to extend it.  Some bugs related to getline error conditions
were also fixed.

* Noteworthy changes in release 2.0.0 (2022-06-20) [stable]

** Compared to last stable branch 1.10.x the 2.0.0 release
** drops all obsolete APIs, drops the abandoned KERBEROS_V5 mechanism,
** stops shipping a separate tarball for only the library, adds new APIs
** gsasl_mechanism_name_p() and gsasl_property_free().
Numerous other translation improvements, code cleanups, bug fixes,
documentation additions, build improvements and portability
enhancements were made as well.

* Noteworthy changes in release 1.11.3 (2022-06-13) [beta]

** libgsasl: Fix substring prefix bug in gsasl_client_suggest_mechanism.
Reported by "Kevin J. McCarthy" <kevin@8t8.us> in
<https://lists.gnu.org/archive/html/help-gsasl/2021-12/msg00005.html

** libgsasl: Fix GSSAPI client encode/decode memory buffer length buf.
Reported by "tbc TobeContinued" <tbc.dengwenqi@gmail.com> in
<https://lists.gnu.org/archive/html/help-gsasl/2022-01/msg00000.html>.

** libgsasl: Fix DIGEST-MD5 compiler warnings.
Reported by Martin Liška <mliska@suse.cz> in
<https://lists.gnu.org/archive/html/help-gsasl/2022-01/msg00001.html>
and Dirk Müller <dmueller@suse.de> in
<https://lists.gnu.org/archive/html/help-gsasl/2022-01/msg00003.html>.

** libgsasl: Rename gsasl_is_mechanism_name_valid to gsasl_mechanism_name_p.
For better sorting of public APIs and consistency with other *_p
function name usage.
